--- a/index.html
+++ b/index.html
@@ -133,34 +133,46 @@
             <div class="photos">
                 <div class="slideshow_container">
                     <div class="mySlides fade shadow">
-                        <img src="images/london/1.jpg" style="width: 100%;" alt="image">
+                        <img src="images/new/1.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/18.jpg" style="width: 100%;" alt="image">
+                        <img src="images/new/2.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/19.jpg" style="width: 100%;" alt="image">
+                        <img src="images/new/3.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/15.jpg" style="width: 100%;" alt="image">
+                        <img src="images/new/4.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/16.jpg" style="width: 100%;" alt="image">
+                        <img src="images/new/5.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/17.jpg" style="width: 100%;" alt="image">
+                        <img src="images/new/7.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/7.jpg" style="width: 100%;" alt="image">
+                        <img src="images/new/10.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/10.jpg" style="width: 100%;" alt="image">
+                        <img src="images/new/11.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/11.jpg" style="width: 100%;" alt="image">
+                        <img src="images/new/15.jpg" style="width: 100%;" alt="image">
                     </div>
                     <div class="mySlides fade shadow">
-                        <img src="images/london/5.jpg" style="width: 100%;" alt="image">
+                        <img src="images/new/16.jpg" style="width: 100%;" alt="image">
+                    </div>
+                    <div class="mySlides fade shadow">
+                        <img src="images/new/17.jpg" style="width: 100%;" alt="image">
+                    </div>
+                    <div class="mySlides fade shadow">
+                        <img src="images/new/18.jpg" style="width: 100%;" alt="image">
+                    </div>
+                    <div class="mySlides fade shadow">
+                        <img src="images/new/19.jpg" style="width: 100%;" alt="image">
+                    </div>
+                    <div class="mySlides fade shadow">
+                        <img src="images/new/24.jpg" style="width: 100%;" alt="image">
                     </div>
                 </div>
             </div>
