--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Ξενόγλωσση παιδεία - Φροντιστήρια Αγγλικών Ιταλικών Γαλλικών Γερμανικών Ισπανικών Κινεζικών Ρωσικών Τουρκικών Βόλος, ξένες γλώσσες στο βόλο.">
-        <meta name="keywords" content="ξενόγλωσση παιδεία, φροντιστήρια αγγλικών, φροντιστήρια ιταλικών, φροντιστήρια γαλλικών, φροντιστήρια γερμανικών, φροντιστήρια ισπανικών, φροντιστήρια κινεζικών, φροντιστήρια ρωσικών, φροντιστήρια τουρκικών, βόλος, ξένες γλώσσες στο βόλο, ξενες γλωσσες στο βολο, που να μάθω ξένες γλώσσες στο βόλο, φροντιστήρια ξένων γλωσσών, αγγλικά, γαλλικά, γερμανικά, ιταλικά, ισπανικά, ρωσικά, τουρκικά">
+        <meta name="keywords" content="ξενόγλωσση παιδεία, αγγλικά βόλος, αγγλικα βολος, φροντιστήρια αγγλικών, φροντιστήρια ιταλικών, φροντιστήρια γαλλικών, φροντιστήρια γερμανικών, φροντιστήρια ισπανικών, φροντιστήρια κινεζικών, φροντιστήρια ρωσικών, φροντιστήρια τουρκικών, βόλος, ξένες γλώσσες στο βόλο, ξενες γλωσσες στο βολο, που να μάθω ξένες γλώσσες στο βόλο, φροντιστήρια ξένων γλωσσών, αγγλικά, γαλλικά, γερμανικά, ιταλικά, ισπανικά, ρωσικά, τουρκικά">
         <meta name="author" content="Maria Pantazi, Nikos Chatzivangelis">
     </head>
 
@@ -37,7 +37,7 @@
                         <h4 class="modal-title">Καλοκαιρινή Προσφορά!</h4>
                     </div>
                     <div class="modal-body">
-                        <p>Μέχρι 31 Αυγούστου, A και Β junior με 150€ ανα τάξη!</p>
+                        <p>Μέχρι 11 Σεπτέμβρη, A και Β junior με 150€ ανα τάξη!</p>
                     </div>
                     <div class="more">
                         <span><a href="offers/offers.html">Μάθε Περισσότερα για τις προσφορές μας!</a> </span>  
