--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,21 @@
 <head>
 	<title>Contact Form</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../css/nav.css">
-	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="../css/shadow.css">
-	<link rel="stylesheet" href="contact_style.css">
-	<link rel="stylesheet" href="../css/footer.css">
-	<link rel="sortcut icon" type="image/png" href="../images/favicon.ico">
+	<link rel="stylesheet" href="css/nav.css">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/shadow.css">
+	<link rel="stylesheet" href="contact/contact_style.css">
+	<link rel="stylesheet" href="css/footer.css">
+	<link rel="sortcut icon" type="image/png" href="images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-	<script src="../js/header.js"></script>
+	<script src="js/header.js"></script>
 	
-	<script src="../js/mobile.js"></script>
+	<script src="js/mobile.js"></script>
 
 	<br>
 
@@ -40,13 +40,13 @@
 	<br>
 
 	<footer>
-		<script src="../js/footer2.js"></script>
+		<script src="js/footer.js"></script>
 	</footer>
 
 <!-- ####################################################################
 ***************************** SCRIPTS ******************************* -->
 
-	<script src="../js/menu.js"></script>
+	<script src="js/menu.js"></script>
 
 </body>
 </html>
