--- a/languages.html
+++ b/languages.html
@@ -3,15 +3,15 @@
 <head>
 	<title>Γλώσσες</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../css/nav.css">
-	<link rel="stylesheet" href="../css/shadow.css">
-	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="languages_style.css">
-	<link rel="stylesheet" href="../css/fade.css">
-	<link rel="stylesheet" href="../css/footer.css">
-	<link rel="sortcut icon" type="image/png" href="../images/favicon.ico">
+	<link rel="stylesheet" href="css/nav.css">
+	<link rel="stylesheet" href="css/shadow.css">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="lang/languages_style.css">
+	<link rel="stylesheet" href="css/fade.css">
+	<link rel="stylesheet" href="css/footer.css">
+	<link rel="sortcut icon" type="image/png" href="images/favicon.ico">
 	<!-- <script src="../js/slide.js"></script> -->
 
 	<link rel="sortcut icon" type="image/png" href="images/icon.png">
@@ -21,9 +21,9 @@
 <body>
 <!-- ############################ HEADER ############################## -->
 
-	<script src="../js/header.js"></script>
+	<script src="js/header.js"></script>
 
-	<script src="../js/mobile.js"></script>
+	<script src="js/mobile.js"></script>
 
 
 	<main class="content shadow">
@@ -32,37 +32,37 @@
 		<br><br>
 		<div class="slideshow_container">
 			<div class="mySlides fade shadow">
-				<img src="../images/en/big-ben.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/big-ben.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/tower_bridg.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/tower_bridg.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/eiffel_tower.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/eiffel_tower.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/louvre.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/louvre.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/cirt.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/cirt.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/gate.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/gate.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/colosseum.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/colosseum.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/trevi.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/trevi.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/turkey.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/turkey.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/russia.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/russia.jpg" style="width: 100%;" alt="image">
 			</div>
 			<div class="mySlides fade shadow">
-				<img src="../images/en/china.jpg" style="width: 100%;" alt="image">
+				<img src="images/en/china.jpg" style="width: 100%;" alt="image">
 			</div>
 		</div>
 
@@ -202,11 +202,11 @@
 
 	
 	<footer>
-		<script src="../js/footer2.js"></script>
+		<script src="js/footer.js"></script>
 	</footer>
 
-	<script src="../js/menu.js"></script>
-	<script src="../js/slide.js"></script>
+	<script src="js/menu.js"></script>
+	<script src="js/slide.js"></script>
 
 	<script>
 		function langs_eng() {
