--- a/offers.html
+++ b/offers.html
@@ -5,21 +5,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../css/nav.css">
-	<link rel="stylesheet" href="../css/shadow.css">
-	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="offers.css">
-	<link rel="stylesheet" href="../css/footer.css">
-	<link rel="sortcut icon" type="image/png" href="../images/favicon.ico">
+	<link rel="stylesheet" href="css/nav.css">
+	<link rel="stylesheet" href="css/shadow.css">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="offers/offers.css">
+	<link rel="stylesheet" href="css/footer.css">
+	<link rel="sortcut icon" type="image/png" href="images/favicon.ico">
 	<title>Προσφορές</title>
 </head>
 
 <body>
 
-	<script src="../js/header.js"></script>
-	<script src="../js/mobile.js"></script>
+	<script src="js/header.js"></script>
+	<script src="js/mobile.js"></script>
 
 	<main class="content shadow">
 		<h1 class="title2">Προσφορές</h1>
@@ -69,10 +69,10 @@
 	
 
 	<footer>
-		<script src="../js/footer2.js"></script>
+		<script src="js/footer.js"></script>
 	</footer>
 
-	<script src="../js/menu.js"></script>
+	<script src="js/menu.js"></script>
 
 
 </body>
