--- a/crew.html
+++ b/crew.html
@@ -4,20 +4,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="../css/nav.css">
-	<link rel="stylesheet" href="../css/shadow.css">
-	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="crew_style.css">
-	<link rel="stylesheet" href="../css/footer.css">
-	<link rel="sortcut icon" type="image/png" href="../images/favicon.ico">
+	<link rel="stylesheet" href="css/nav.css">
+	<link rel="stylesheet" href="css/shadow.css">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="crew/crew_style.css">
+	<link rel="stylesheet" href="css/footer.css">
+	<link rel="sortcut icon" type="image/png" href="images/favicon.ico">
 	<title>Καθηγητές</title>
 </head>
 <body>
 
-	<script src="../js/header.js"></script>
-	<script src="../js/mobile.js"></script>
+	<script src="js/header.js"></script>
+	<script src="js/mobile.js"></script>
 
 	<main class="content shadow">
 		<br>
@@ -25,63 +25,63 @@
 		<br><br>
 		<div class="crew_members">
 			<div class="container1">
-				<img src="photos/litsa.png" alt="Avatar" class="image1">
+				<img src="crew/photos/litsa.png" alt="Avatar" class="image1">
 				<div class="overlay1">
 					<div class="text1">Αγγλικά <br> <br> Ευαγγελία Βασδέκη</div>
 				</div>
 			</div>
 	
 			<div class="container2">
-				<img src="photos/nineta.png" alt="Avatar" class="image2">
+				<img src="crew/photos/nineta.png" alt="Avatar" class="image2">
 				<div class="overlay2">
 					<div class="text2">Αγγλικά Υπεύθυνη ροής προγράμματος <br> <br> Νινέτα Τζιότζια</div>
 				</div>
 			</div>
 	
 			<div class="container3">
-				<img src="photos/chrysa.png" alt="Avatar" class="image3">
+				<img src="crew/photos/chrysa.png" alt="Avatar" class="image3">
 				<div class="overlay3">
 					<div class="text3">Αγγλικά <br> <br> Χρύσα Πιππή</div>
 				</div>
 			</div>
 			<div class="container4">
-				<img src="photos/rosemary.png" alt="Avatar" class="image4">
+				<img src="crew/photos/rosemary.png" alt="Avatar" class="image4">
 				<div class="overlay4">
 					<div class="text4">Αγγλικά <br> <br> Rosemary Tanner</div>
 				</div>
 			</div>
 			<div class="container5">
-				<img src="photos/george.png" alt="Avatar" class="image5">
+				<img src="crew/photos/george.png" alt="Avatar" class="image5">
 				<div class="overlay5">
 					<div class="text5">Γαλλικά <br> Αγγλικά <br> <br> Γιώργος Τσοποτός</div>
 				</div>
 			</div>
 			<div class="container6">
-				<img src="photos/john.png" alt="Avatar" class="image6">
+				<img src="crew/photos/john.png" alt="Avatar" class="image6">
 				<div class="overlay6">
 					<div class="text6">Γερμανικά <br> <br> Γιάννης Δημητριάδης</div>
 				</div>
 			</div>
 			<div class="container7">
-				<img src="photos/natassa.png" alt="Avatar" class="image7">
+				<img src="crew/photos/natassa.png" alt="Avatar" class="image7">
 				<div class="overlay7">
 					<div class="text7">Ιταλικά <br> <br> Νατάσα Στάθη</div>
 				</div>
 			</div>
 			<div class="container8">
-				<img src="photos/laura.png" alt="Avatar" class="image8">
+				<img src="crew/photos/laura.png" alt="Avatar" class="image8">
 				<div class="overlay8">
 					<div class="text8">Ισπανικά <br> <br> Laura Sust Farriol</div>
 				</div>
 			</div>
 			<div class="container9">
-				<img src="photos/tina.png" alt="Avatar" class="image9">
+				<img src="crew/photos/tina.png" alt="Avatar" class="image9">
 				<div class="overlay9">
 					<div class="text9">Ρωσικά <br> <br> Τίνα Κουτρουλή</div>
 				</div>
 			</div>
 			<div class="container10">
-				<img src="photos/ksenia.png" alt="Avatar" class="image10">
+				<img src="crew/photos/ksenia.png" alt="Avatar" class="image10">
 				<div class="overlay10">
 					<div class="text10">Κινεζικά Τουρκικά <br> <br> Ξένια Σαρρή</div>
 				</div>
@@ -94,10 +94,10 @@
 	
 
 	<footer>
-		<script src="../js/footer2.js"></script>
+		<script src="js/footer.js"></script>
 	</footer>
 	
-	<script src="../js/menu.js"></script>
+	<script src="js/menu.js"></script>
 	
 </body>
 </html>
